--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="interfaceWorld"/>
+	<classpathentry kind="src" path="coaReflect"/>
+	<classpathentry kind="src" path="coaLib"/>
 	<classpathentry kind="src" path="jbridge"/>
 	<classpathentry kind="src" path="coa"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
