Better performance, Coa integration

--- a/.classpath
+++ b/.classpath
@@ -6,6 +6,7 @@
 	<classpathentry kind="src" path="coaLib"/>
 	<classpathentry kind="src" path="jbridge"/>
 	<classpathentry kind="src" path="coa"/>
+	<classpathentry kind="src" path="coaRuntime"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
